feat: 完成login页初版设计
- 实现login页初版布局与样式
- 设计基础交互逻辑

--- a/frontend/src/style.css
+++ b/frontend/src/style.css
@@ -4,15 +4,10 @@ html, body {
 
 @font-face {
     font-family: "hsc";
-    src: url("https://db.onlinewebfonts.com/t/243710884e5ebac408cd10a7a89fcc96.eot");
-    src: url("https://db.onlinewebfonts.com/t/243710884e5ebac408cd10a7a89fcc96.eot?#iefix")format("embedded-opentype"),
-    url("https://db.onlinewebfonts.com/t/243710884e5ebac408cd10a7a89fcc96.woff2")format("woff2"),
-    url("https://db.onlinewebfonts.com/t/243710884e5ebac408cd10a7a89fcc96.woff")format("woff"),
-    url("https://db.onlinewebfonts.com/t/243710884e5ebac408cd10a7a89fcc96.ttf")format("truetype"),
-    url("https://db.onlinewebfonts.com/t/243710884e5ebac408cd10a7a89fcc96.svg#HarmonyOS Sans SC")format("svg");
+    src: url("./assets/hsc.ttf") format("truetype");
     font-display: swap;
 }
 
-html {
-    font-family: 'hsc', 'Consolas', sans-serif !important;
+html, body, input {
+    font-family: hsc, sans-serif !important;
 }
